2010-06-06  Richard Murray  <murray@sumatra.local>

	* src/matlab.py (bode): created a wrapper that allows MATLAB style
	arguments for bode (eg, bode(sys1, sys2))

	* src/ctrlutil.py (issys): added new function to check if an object
	is a system (state space or transfer function).  Will generalize
	this latter to look for other compatible classes.

	* src/freqplot.py (bode): Compute frequency range of bode plot based
	on poles and zeros
	(bode): Allow bode plot to be passed a list (or tuple) as the first
	argument, in which case multiple bode plots are generated

	* src/statesp.py (StateSpace.zeros): new function to compute zeros
	for a state space system
	(StateSpace): defined new functions to compute poles of a state
	space system

	* src/xferfcn.py (TransferFunction): defined new functions to
	compute poles and zeros of a transfer function.

2010-05-31  Richard Murray  <murray@sumatra.local>

	* src/exception.py (ControlNotImplemented): added new exception, to
	be used for functions that are not yet implemented

	* src/statefbk.py (lqr): added lqr function (using slycot).  Still
	needs to be verified to make sure calculations are correct.

	* ChangeLog: converted to standard GNU formation (old style below)
	* setup.py: updated package number to v0.3, changed URL to
	sourceforge wiki

------------------	
31 May 2010, RMM: added place() function using slycot
  * New module: statefbk - functions to design state feedback controllers
  * Uses Enrico Avventi slycot wrappers (http://github.com/avventi/Slycot)
  * Also added some exception types: ControlSlycot and ControlDimension
  * Added new example to test slycot interface (directly)

29 May 2010, RMM: updated function documentation
  * Added __doc__ strings for all current functions
  * Added __doc__ string to matlab module, listing control toolbox functions

22 May 2010, RMM: tweaked comments and released v0.3a
  * Changed copyright information on modified files to 2010