@@ -1,5 +1,7 @@
 2010-06-06  Richard Murray  <murray@sumatra.local>
 
+	* examples/pvtol-lqr.py: Added example to test out LQR routines
+
 	* src/matlab.py (bode): created a wrapper that allows MATLAB style
 	arguments for bode (eg, bode(sys1, sys2))
 
